--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@
           <div class="error">Password should be at least 8 characters</div>
           <button type="" name="" class="btn">Log In</button>
           <p>
-            Already have an account ?
-            <a href="index.html" class="nav-link">| Sign Up</a>
+            Don't have an account ?
+            <a href="index.html" class="nav-link">| Sign up</a>
           </p>
           <div class="support">
             <p><a href="#" class="">Reset Password</a></p>
