--- a/dashboard.html
+++ b/dashboard.html
@@ -16,8 +16,8 @@
     />
   </head>
   <body>
-    <header>
-      <div class="container-md shadow">
+    <header class="header">
+      <div class="container-sm shadow">
         <div class="row">
           <div class="col-sm-6">
             <img
@@ -37,7 +37,7 @@
       </div>
     </header>
     <section>
-      <div class="container-md">
+      <div class="container-sm">
         <div class="dash-cont">
           <div class="dash-control">
             <div class="dash-control-box shadow">
@@ -72,8 +72,8 @@
             <h3>Dashboard</h3>
             <p>Dashboard - Marilyn Oma Anona Profile</p>
             <div class="main-content-box">
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button class="btn btn-danger  me-md-2" type="button">Edit Profile</button>
+                <div class=" gap-2 d-md-flex justify-content-md-end">
+                    <button class="btn1 btn-danger  me-md-2" type="button">Edit Profile</button>
                   </div>
                 <div class="profile-details">
                     <img class="dash-img" src="images/dash-img.jpeg" alt="" />
@@ -86,10 +86,10 @@
                         <li><a href="" class="ctrl">Course/Assignment</a></li>
                         <li><a href="" class="ctrl">Lectures</a></li>
                         </ul>
-               <br><br>
+               <br>
                             <h5>Personal Information</h5>
-                            <div class="table-responsive-*">
-                                <table class="table table-borderless">
+                            <div class="table-responsive-sm">
+                                <table class="table table-sm table-borderless">
                                     <thead>
                                         <tr>
                                           <th scope="col">First Name</th>
@@ -139,6 +139,8 @@
                     </div>                        
                 </div>
             </div>
+          </div>
+        </div>
             
 
     <!--Bootstrap script tag-->
