--- a/assig6.html
+++ b/assig6.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <div class="container-md shadow">
+      <div class="container-sm shadow">
         <div class="row">
           <div class="col-sm-6">
             <img
@@ -37,7 +37,7 @@
       </div>
     </header>
     <section>
-      <div class="container-md ">
+      <div class="container-sm ">
         <div class="dash-cont">
           <div class="dash-control">
             <div class="dash-control-box shadow">
